Use ProtocolLib PLAYER_INFO packets